# mask-deepagents

./: .env.example  README.md  pyproject.toml
config/prompts/: system.md
docs/: BUILD_GUIDE.md
src/mask_deepagents/: __init__.py  agent.py  main.py
tests/: test_deepagent.py
